--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -26,9 +26,9 @@
 }
 .bookSection{
     @media(min-width: 768px){
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
     }
 }
 .bookpoints{
